--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^1.3.1",
-    "@material-ui/icons": "^1.1.0",
+    "@material-ui/icons": "^1.1.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -27,6 +27,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "history": "4.7.2",
     "jspdf": "^1.4.1",
+    "material-ui": "^0.20.2",
     "node-sass": "^4.14.0",
     "node-sass-json-importer": "^3.3.1",
     "normalize.css": "7.0.0",
