Add sidebar to invoice page

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "clsx": "^1.1.1",
     "contentful": "^6.1.1",
     "css-loader": "0.28.4",
     "express": "^4.16.3",
@@ -28,7 +29,7 @@
     "history": "4.7.2",
     "jspdf": "^1.4.1",
     "material-ui": "^0.20.2",
-    "node-sass": "^4.14.0",
+    "node-sass": "^4.14.1",
     "node-sass-json-importer": "^3.3.1",
     "normalize.css": "7.0.0",
     "react": "^16.3.0",
