Add discount functionality

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "history": "4.7.2",
     "jspdf": "^1.4.1",
     "material-ui": "^0.20.2",
+    "material-ui-color-picker": "^3.5.1",
     "node-sass": "^4.14.1",
     "node-sass-json-importer": "^3.3.1",
     "normalize.css": "7.0.0",
