--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.1",
+    "@material-ui/pickers": "^3.2.10",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -24,19 +26,25 @@
     "clsx": "^1.1.1",
     "contentful": "^6.1.1",
     "css-loader": "0.28.4",
+    "date-fns": "^2.16.1",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "history": "4.7.2",
     "jspdf": "^1.4.1",
     "material-ui": "^0.20.2",
     "material-ui-color-picker": "^3.5.1",
+    "material-ui-pickers": "^2.2.4",
+    "moment": "^1.1.0",
     "node-sass": "^4.14.1",
     "node-sass-json-importer": "^3.3.1",
     "normalize.css": "7.0.0",
-    "react": "^16.3.0",
+    "react": "^16.8.0",
     "react-color": "^2.14.1",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.3.0",
+    "react-datepicker": "^3.2.2",
+    "react-dom": "^16.8.0",
+    "react-icons": "^3.11.0",
+    "react-moment": "^1.0.0",
     "react-paginate": "^5.2.3",
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.2",
@@ -53,6 +61,8 @@
   "devDependencies": {
     "cross-env": "5.0.5",
     "dotenv": "4.0.0",
+    "eslint": "^7.10.0",
+    "eslint-plugin-react": "^7.21.2",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   }
