--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Shane Hobson",
   "license": "MIT",
   "scripts": {
+    "build": "webpack --env production",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "start": "node server.js",
@@ -30,7 +31,10 @@
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "history": "4.7.2",
-    "jspdf": "^1.4.1",
+    "html2canvas": "^1.0.0-rc.7",
+    "jquery": "^3.6.0",
+    "jspdf": "^1.5.3",
+    "jspdf-react": "^1.0.11",
     "material-ui": "^0.20.2",
     "material-ui-color-picker": "^3.5.1",
     "material-ui-pickers": "^2.2.4",
@@ -38,6 +42,7 @@
     "node-sass": "^4.14.1",
     "node-sass-json-importer": "^3.3.1",
     "normalize.css": "7.0.0",
+    "pdfmake": "^0.1.70",
     "react": "^16.8.0",
     "react-color": "^2.14.1",
     "react-copy-to-clipboard": "^5.0.1",
