--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.1",
     "@material-ui/pickers": "^3.2.10",
+    "axios": "^0.21.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
